--- a/app/index.html
+++ b/app/index.html
@@ -36,7 +36,7 @@
 			<li><a href="http://fr.linkedin.com/in/danieletabanella" class="tb-linkedin" target="_blank"></a></li>
 			<li><a href="https://www.behance.net/daniele_tabanella" class="tb-behance" target="_blank"></a></li>
 			<li><a href="http://codepen.io/leRenard/" class="tb-codepen-logo-2" target="_blank"></a></li>
-			<li><a href="https://github.com/Gummibearlab" class="tb-github" target="_blank"></a></li>
+			<li><a href="https://github.com/lerenart" class="tb-github" target="_blank"></a></li>
 		</ul>
 
 	</div>
