--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
     <!-- bower:css -->
     <!-- endbower -->
     <!-- endbuild -->
-  	<link href="https://fontastic.s3.amazonaws.com/p7bdE7RCEkQpTd2P42SeXU/icons.css" rel="stylesheet">
+    <link href="https://file.myfontastic.com/p7bdE7RCEkQpTd2P42SeXU/icons.css" rel="stylesheet">
 
 
     <!-- build:css styles/main.css -->
