--- a/app/index.html
+++ b/app/index.html
@@ -13,8 +13,6 @@
     <!-- bower:css -->
     <!-- endbower -->
     <!-- endbuild -->
-    <link href="https://file.myfontastic.com/p7bdE7RCEkQpTd2P42SeXU/icons.css" rel="stylesheet">
-
 
     <!-- build:css styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
@@ -33,10 +31,10 @@
 		<h1 id="logo">Daniele Tabanella, Webdesigner et Intégrateur - Paris</h1>
 
 		<ul id="social">
-			<li><a href="http://fr.linkedin.com/in/danieletabanella" class="tb-linkedin" target="_blank"></a></li>
+			<li><a href="https://www.linkedin.com/in/danieletabanella" class="tb-linkedin" target="_blank"></a></li>
 			<li><a href="https://www.behance.net/daniele_tabanella" class="tb-behance" target="_blank"></a></li>
-			<li><a href="http://codepen.io/leRenard/" class="tb-codepen-logo-2" target="_blank"></a></li>
-			<li><a href="https://github.com/lerenart" class="tb-github" target="_blank"></a></li>
+			<li><a href="https://codepen.io/leRenard" class="tb-codepen-logo-2" target="_blank"></a></li>
+			<li><a href="https://gitlab.com/daniele.tabanella" class="tb-github" target="_blank"></a></li>
 		</ul>
 
 	</div>
