--- a/app/index.html
+++ b/app/index.html
@@ -45,7 +45,7 @@
     <!-- endbower -->
     <!-- endbuild -->
     <!--CDN link for the latest TweenMax-->
-    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+    <script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/gsap/latest/plugins/ScrollToPlugin.min.js"></script>
 
