fix(github): github

--- a/app/index.html
+++ b/app/index.html
@@ -34,7 +34,7 @@
 			<li><a href="https://www.linkedin.com/in/danieletabanella" class="tb-linkedin" target="_blank"></a></li>
 			<li><a href="https://www.behance.net/daniele_tabanella" class="tb-behance" target="_blank"></a></li>
 			<li><a href="https://codepen.io/leRenard" class="tb-codepen-logo-2" target="_blank"></a></li>
-			<li><a href="https://gitlab.com/daniele.tabanella" class="tb-github" target="_blank"></a></li>
+			<li><a href="https://github.com/theRenard" class="tb-github" target="_blank"></a></li>
 		</ul>
 
 	</div>
